--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <div class="row">
 
                 <div class="about-col-1">
-                    <img src="Images/background3.jpeg">
+                    <img src="Images/about.jpg">
                 </div>
                 
                 <div class="about-col-2">
