--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-compatible" content="IE=edge">
         <meta name = "viewport" content="width=device-width,initial scale=1.0">
-        <title>Personal Portfolio</title>
+        <title>Sanzida's Portfolio</title>
         <link rel= "stylesheet"  href="style.css">
 
         <script src="https://kit.fontawesome.com/d0409b9ee1.js" crossorigin="anonymous"></script>
@@ -109,7 +109,7 @@
                    <b>Language</b> : HTML, CSS
                    <b>Environment</b> : VS Code
                 </p>
-               <a href="#">Learn more</a>
+               <a href="https://github.com/Sanzida-Afrin-Promi/Portfolio">Learn more</a>
               </div>
   
               <div>
@@ -119,7 +119,7 @@
                     <b>Environment</b> : Android Studio<br>
                     <b>Database</b> : Firebase
                   </p>
-               <a href="#">Learn more</a>
+               <a href="https://github.com/fahadPathan7/Connect">Learn more</a>
               </div>
   
               <div>
@@ -164,13 +164,13 @@
   
               <div>
                   <h2>Android App</h2>
-                  <p> I can develop android apps with database backend for you.</p>
+                  <p> I can develop android apps with database backend for you using Java language</p>
                
               </div>
   
               <div>
                   <h2>2D Games</h2>
-                  <p>I can build story based fighting and survival games for you</p>
+                  <p>I can build story based fighting and survival games for you using C++</p>
                
               </div>
   
